opal_core/src/snapshots/opal_core__parser__tests__block.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"{ var x = 3; }\", |parser| parser.parse_block())"
---
Block {
    open_brace: Span {
        start: 0,
        end: 1,
    },
    stmts: [
        VarDecl {
            var: Span {
                start: 2,
                end: 5,
            },
            name: "x",
            name_span: Span {
                start: 6,
                end: 7,
            },
            equals: Span {
                start: 8,
                end: 9,
            },
            value: Int {
                value: 3,
                span: Span {
                    start: 10,
                    end: 11,
                },
            },
            semicolon: Span {
                start: 11,
                end: 12,
            },
        },
    ],
    close_brace: Span {
        start: 13,
        end: 14,
    },
}
