opal_core/src/snapshots/opal_core__parser__tests__expected_colon_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"func main(x i32) {}\", |parser| parser.parse_decl())"
---
ParseError {
    span: Some(
        Span {
            start: 12,
            end: 15,
        },
    ),
    message: "expected colon",
}
