opal_core/src/snapshots/opal_core__parser__tests__expected_equals_sign_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"var x 3;\", |parser| parser.parse_stmt())"
---
ParseError {
    span: Some(
        Span {
            start: 6,
            end: 7,
        },
    ),
    message: "expected equals sign",
}
