opal_core/src/snapshots/opal_core__parser__tests__expected_expression_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\";\", |parser| parser.parse_expr(0))"
---
ParseError {
    span: Some(
        Span {
            start: 0,
            end: 1,
        },
    ),
    message: "expected an expression",
}
