opal_core/src/snapshots/opal_core__parser__tests__expected_function_name_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"func () {}\", |parser| parser.parse_decl())"
---
ParseError {
    span: Some(
        Span {
            start: 5,
            end: 6,
        },
    ),
    message: "expected function name",
}
