opal_core/src/snapshots/opal_core__parser__tests__expected_opening_brace_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"func main()\", |parser| parser.parse_decl())"
---
ParseError {
    span: None,
    message: "expected opening brace",
}
