opal_core/src/snapshots/opal_core__parser__tests__expected_parameter_name_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"func main(: i32) {}\", |parser| parser.parse_decl())"
---
ParseError {
    span: Some(
        Span {
            start: 10,
            end: 11,
        },
    ),
    message: "expected parameter name",
}
