opal_core/src/snapshots/opal_core__parser__tests__expected_semicolon_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"foo(1)\", |parser| parser.parse_stmt())"
---
ParseError {
    span: None,
    message: "expected semicolon",
}
